--- a/Antra.CrmAPI/appsettings.json
+++ b/Antra.CrmAPI/appsettings.json
@@ -1,6 +1,11 @@
 {
-  
+
   "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudiene": "User",
+    "ValidIssuer": "https://localhost:7282",
+    "Secret": "AntraIncBlogSecretKey1234567"
+  },
   "ConnectionStrings": {
     "OnlineCRM": "Data Source=.;Initial Catalog=OnlineCRM;Integrated Security=True"
   },
